--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://saptarsidebn-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1mvwvhrjst3p.us-south.codeengine.appdomain.cloud
+sentiment_analyzer_url=https://sentianalyzer.1o9c2nbdwzhy.us-south.codeengine.appdomain.cloud/
